RESOLVED FIXED162129
ASSERTION FAILED: clipRectsContext.rootLayer == m_clipRectsCache->m_clipRectsRoot[clipRectsType] while loading guardian.co.uk
https://bugs.webkit.org/show_bug.cgi?id=162129
Summary ASSERTION FAILED: clipRectsContext.rootLayer == m_clipRectsCache->m_clipRects...
alan
Reported 2016-09-17 20:19:01 PDT
1. Load guardian.co.uk in debug mode. -> ASSERT 1 0x1081269f0 WTFCrash 2 0x10c4089a0 WebCore::RenderLayer::updateClipRects(WebCore::RenderLayer::ClipRectsContext const&) 3 0x10c409c8f WebCore::RenderLayer::parentClipRects(WebCore::RenderLayer::ClipRectsContext const&, WebCore::ClipRects&) const 4 0x10c3fdafa WebCore::RenderLayer::backgroundClipRect(WebCore::RenderLayer::ClipRectsContext const&) const 5 0x10c403c81 WebCore::RenderLayer::calculateRects(WebCore::RenderLayer::ClipRectsContext const&, WebCore::LayoutRect const&, WebCore::LayoutRect&, WebCore::ClipRect&, WebCore::ClipRect&, WebCore::LayoutSize const&) const 6 0x10c401e1a WebCore::RenderLayer::collectFragments(WTF::Vector<WebCore::LayerFragment, 1ul, WTF::CrashOnOverflow, 16ul>&, WebCore::RenderLayer const*, WebCore::LayoutRect const&, WebCore::RenderLayer::PaginationInclusionMode, WebCore::ClipRectsType, WebCore::OverlayScrollbarSizeRelevancy, WebCore::ShouldRespectOverflowClip, WebCore::LayoutSize const&, WebCore::LayoutRect const*, WebCore::ShouldApplyRootOffsetToFragments) 7 0x10c3fe980 WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 8 0x10c3fe07b WebCore::RenderLayer::paintLayerContentsAndReflection(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 9 0x10c3fccfb WebCore::RenderLayer::paintLayer(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 10 0x10c402ab4 WebCore::RenderLayer::paintList(WTF::Vector<WebCore::RenderLayer*, 0ul, WTF::CrashOnOverflow, 16ul>*, WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 11 0x10c3fecc1 WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int) 12 0x10c433685 WebCore::RenderLayerBacking::paintIntoLayer(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, WebCore::IntRect const&, unsigned int, unsigned int) 13 0x10c433a8d WebCore::RenderLayerBacking::paintContents(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, unsigned int, WebCore::FloatRect const&) 14 0x10b0e095b WebCore::GraphicsLayer::paintGraphicsLayerContents(WebCore::GraphicsContext&, WebCore::FloatRect const&) 15 0x10b0f3061 WebCore::GraphicsLayerCA::platformCALayerPaintContents(WebCore::PlatformCALayer*, WebCore::GraphicsContext&, WebCore::FloatRect const&) 16 0x10b0f30bf non-virtual thunk to WebCore::GraphicsLayerCA::platformCALayerPaintContents(WebCore::PlatformCALayer*, WebCore::GraphicsContext&, WebCore::FloatRect const&) 17 0x10c1fdd96 WebCore::PlatformCALayer::drawLayerContents(CGContext*, WebCore::PlatformCALayer*, WTF::Vector<WebCore::FloatRect, 5ul, WTF::CrashOnOverflow, 16ul>&) 18 0x10cdad774 -[WebLayer drawInContext:] 19 0x7fff88bcbd44 CABackingStoreUpdate_ 20 0x7fff88bcad6d invocation function for block in CA::Layer::display_() 21 0x7fff88bca759 CA::Layer::display_() 22 0x10cdadc19 -[WebSimpleLayer display] 23 0x7fff88bbc4a5 CA::Layer::display_if_needed(CA::Transaction*) 24 0x7fff88bbbfcd CA::Layer::layout_and_display_if_needed(CA::Transaction*) 25 0x7fff88bbb4a1 CA::Context::commit_transaction(CA::Transaction*) 26 0x7fff88bbb0ec CA::Transaction::commit() 27 0x7fff88bc6977 CA::Transaction::observer_callback(__CFRunLoopObserver*, unsigned long, void*) 28 0x7fff924a3067 __CFRUNLOOP_IS_CALLING_OUT_TO_AN_OBSERVER_CALLBACK_FUNCTION__ 29 0x7fff924a2fd7 __CFRunLoopDoObservers 30 0x7fff92481ef8 CFRunLoopRunSpecific 31 0x7fff9c637935 RunCurrentEventLoopInMode
Attachments
Patch (4.71 KB, patch)
2016-09-17 21:12 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2016-09-17 20:19:53 PDT
alan
Comment 2 2016-09-17 21:12:52 PDT
WebKit Commit Bot
Comment 3 2016-09-19 10:39:10 PDT
Comment on attachment 289190 [details] Patch Clearing flags on attachment: 289190 Committed r206100: <http://trac.webkit.org/changeset/206100>
WebKit Commit Bot
Comment 4 2016-09-19 10:39:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.